--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-  "buildCommand": "pip install -r requirements.txt",
-  "framework": "fastapi",
-  "functions": {
-    "api/index.py": {
-      "memory": 512,
-      "maxDuration": 30
-    }
-  }
+  "framework": "fastapi"
 }
