--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-  "framework": "fastapi"
+  "buildCommand": "true",
+  "framework": "fastapi",
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.11"
+    }
+  },
+  "env": {
+    "PIP_NO_BUILD_ISOLATION": "true"
+  }
 }
