--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "framework": "fastapi",
-  "buildCommand": "pip install -r requirements.txt --break-system-packages || uv pip install --system -r requirements.txt",
-  "env": {
-    "PYTHON_VERSION": "3.11"
-  }
+  "buildCommand": "pip install --break-system-packages -r requirements.txt"
 }
