--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "framework": "fastapi",
-  "buildCommand": "pip install --break-system-packages -r requirements.txt"
+  "framework": "fastapi"
 }
